--- a/pages/project/index.wxml
+++ b/pages/project/index.wxml
@@ -2,7 +2,7 @@
 <view id="project">
   <!-- 个人项目 -->
   <view id="project-swiper">
-    <swiper indicator-dots="true" indicator-active-color="#00b38a" autoplay='true' circular='true'>
+    <swiper indicator-dots="true" indicator-active-color="#00b38a" autoplay='true' circular='true' style='height:200px'>
       <swiper-item><image src='../../img/project/project1.png'></image></swiper-item>
       <swiper-item><image src='../../img/project/project2.png'></image></swiper-item>
       <swiper-item><image src='../../img/project/project3.png'></image></swiper-item>
